style.css
* {
  box-sizing: border-box;
}

a {
  color: #6900ff;
}

a:hover {
  color: #fff;
}

html,
body {
  color: #fff;
  background-color: #222;
  height: 100%;
  width: 100%;
}

body {
  margin: 0;
  font-family: "DejaVu Sans Mono", monospace;
}

footer {
  align-items: center;
  border-top: #fff 1px solid;
  display: flex;
  flex-wrap: wrap;
  padding: 5px 10px;
  width: 100%;
}

footer > img {
  flex: 0;
  justify-self: flex-start;
}

h1 {
  font-size: 2.2em;
  margin: 0.7em 0;
}
h2 {
  font-size: 1.5em;
  margin: 0.90em 0;
}
h3 {
  font-size: 1.3em;
  margin: 1.1em 0;
}
h4 {
  font-size: 1.2em;
  margin: 1.25em 0;
}
h5 {
  font-size: 1.1em;
  margin: 1.4em 0;
}
h6 {
  font-size: 1em;
  margin: 1.5em 0;
}

header {
  text-align: center;
  background-image: url(/img/lotus.bloom.png);
  background-repeat: no-repeat;
  background-position: center;
  background-size: auto 80%;
}

header:hover,
header > a:hover {
  background-image: url(/img/lotus.bloom-mo.png);
  color: #6900ff;
}

header > a {
  color: inherit;
  text-decoration: none;
}

hr {
  background-color: #fff;
  color: #fff;
}

li {
  margin: 4px 0;
}

nav {
  background-color: #000;
  border-top: #fff 1px solid;
  padding: 3px;
}

p.note {
  margin: 3px;
  font-size: 0.8rem;
}

section {
  margin-bottom: 2rem;
}

ul {
  list-style:circle;
}

ul.short,
ol.short {
  columns: 2;
}

.contact {
  flex: 1;
  font-size: 0.8em;
  text-align: right;
  margin-left: auto;
}

.contact a {
  border: transparent 1px solid;
  color: inherit;
  display: inline-block;
  padding: 5px;
  text-decoration: none;
}

.doc {
  flex: 1 1 80%;
}

.doc-body {
  border-top: #fff 1px solid;
  padding: 5px 10px;
}

.doc-header {
  background-color: #000;
  border-top: #fff 1px solid;
  padding: 5px 10px;
}

.doc-header > p {
  font-size: 0.85em;
}

.doc-info {
  background-color: #000;
  border: #fff 1px solid;
  border-right: none;
  font-size: 0.8em;
  margin-top: 3px;
  margin-left: 3px;
  text-align: center;
}

.doc-info p {
  margin: 3px 15px;
}

.doc-meta {
  border-left: #fff 1px solid;
  border-top: #fff 1px solid;
  flex: 1 1 20%;
}

.doc-toc {
  border-left: #666 1px solid;
  font-size: 0.8em;
  margin-top: 3px;
  margin-left: 3px;
  padding: 10px;
  position: sticky;
  top: 3px;
}

.doc-toc ol,
.doc-toc ul {
  margin: 4px 0.7em;
  list-style-type: none;
  padding: 0;
}

.dropdwn ul {
  background-color: #000;
  border: #fff 1px solid;
  display: none;
  list-style: none;
  margin: 0;
  padding: 0;
  position: absolute;
}

.dropdwn:hover ul {
  display: flex;
  flex-direction: column;
  min-width: 125px;
  z-index: 1;
}

.img-large {
  max-width: 100%;
}

.infinite-scroll {
  border-bottom: #fff 1px solid;
}

.infinite-scroll:last-of-type {
  border: 0;
}

.main {
  display: flex;
  flex: 1;
}

.nav-list {
    display: flex;
    flex-wrap: wrap;
    gap: 3px;
    list-style-type: none;
    margin: 0;
    padding: 0;
}

.nav-item {
  border: transparent 1px solid;
  padding: 5px;
}

.nav-item:hover,
.contact a:hover {
  background-color: #666;
  border: #fff 1px solid;
}

.nav-item:active,
.contact a:active {
  color: #6900ff;
  background-color: #000;
  border: #6900ff 1px solid;
}

.nav-item a {
  color: inherit;
  text-decoration: none;
}

.no-mark {
  list-style: none;
}

.pinned {
  float: right;
  font-size: 1.25em;
  margin: 10px;
}

.post-date {
  text-align: right;
}

.site {
  display: flex;
  flex-direction: column;
  min-height: 100%;
}

@media (width < 600px) {
  .doc-info {
    border: #fff 2px solid;
    border-bottom: #fff 1px solid;
    margin: 0px;
  }
  .doc-meta {
    border: 0;
  }
  .doc-toc {
    display: none;
  }
  .main {
    flex-direction: column;
  }
}

